[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "runepy"
version = "0.1.0"
description = "RunePy demonstration project built with Panda3D"
dependencies = [
    "panda3d",
    "numpy",
]

[project.scripts]
runepy = "runepy.client:main"


[tool.setuptools.packages.find]
where = ["src"]
include = ["runepy*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools]
py-modules = ["constants"]

