[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "runepy"
version = "0.1.0"
description = "RunePy demonstration project built with Panda3D"
dependencies = [
    "panda3d",
    "numpy",
]

[project.optional-dependencies]
test = [
    "pytest-benchmark",
]

[project.scripts]
runepy = "runepy.client:main"


[tool.setuptools.packages.find]
where = ["src"]
include = ["runepy*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools]
py-modules = ["constants"]

[tool.coverage.run]
branch = true
source = ["runepy"]

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "B", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = ["tests/"]

